// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form Demo form 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <form
      class="sc-fzoXzr jYbPbp"
    >
      <h2
        class="sc-AxgMl hWPmHw"
        font-size="26px"
        font-weight="500"
      >
        Job 324400
      </h2>
      <div
        class="Box-sc-1qu1edy-0 sc-AxjAm jjmQyk sc-fznyAO hRCpfl"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="sc-AxirZ eSGrht"
          color="#cc1439"
          fill="#cc1439"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="Box-sc-1qu1edy-0 iDnpba"
        >
          <p
            class="sc-AxhCb lgbEcN"
            color="currentColor"
            font-size="16px"
            font-weight="bold"
          >
            Errors have occured ...
          </p>
          <p
            class="sc-AxhCb hpmHVQ"
            color="currentColor"
            font-size="16px"
          >
            Instructions and description of errors
          </p>
          <ul
            class="List-sc-1cqkmnl-0 gfYBVm"
            color="currentColor"
          >
            <li
              class="ListItem-qqenhw-0 fGfFTP"
              color="currentColor"
            >
              Affected field
            </li>
            <li
              class="ListItem-qqenhw-0 fGfFTP"
              color="currentColor"
            >
              Unmet criteria
            </li>
            <li
              class="ListItem-qqenhw-0 fGfFTP"
              color="currentColor"
            >
              <a
                href="https://nulogy.design/"
              >
                Affected field
              </a>
            </li>
          </ul>
        </div>
      </div>
      <fieldset
        class="sc-fzoLag lbLQKU"
      >
        <legend
          class="sc-AxheI sc-Axmtr sc-fzoyAV dtjMcd"
          font-size="20px"
          font-weight="500"
        >
          Job Information
        </legend>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Project
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="project"
                  placeholder="Project 128703"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Project description
              </span>
              <span
                class="sc-AxhCb gXnznd"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
              <p
                class="sc-AxhCb sc-fzokOt itwNrV"
                color="currentColor"
                font-size="16px"
              >
                Project description helps identify the project.
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="project-description"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Project status
              </span>
            </div>
            <div
              class=" css-2b097c-container"
            >
              <div
                class=" css-1liu8yu-Control"
              >
                <div
                  class=" css-7zc8my"
                >
                  <div
                    class=" css-1yhx6vz-Placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class="css-17yls17-Input"
                  >
                    <div
                      class=""
                      style="display:inline-block"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="project-status"
                        spellcheck="false"
                        style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class=" css-43ykx9-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-1fi275-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Item code
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="true"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 kjmJXs"
                  id="item-code"
                  value="WS2SB6"
                />
              </div>
            </div>
          </label>
          <div
            class="Box-sc-1qu1edy-0 sc-AxjAm cUVzOc"
            color="#cc1439"
          >
            <svg
              aria-hidden="true"
              class="sc-AxirZ gcJrrZ"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="24px"
              icon="error"
              mr="x1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <div
              class="InlineValidation__Wrapper-sc-1jic7dw-0 XSNbP"
            >
              <p
                class="sc-AxhCb hpmHVQ"
                color="currentColor"
                font-size="16px"
              >
                Item WS2SB6 does not exist.
              </p>
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Eaches expected on Job
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="eaches-expected"
                  placeholder="2 000"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Eaches remaining on Project
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 eRPyZS"
                  disabled=""
                  id="eaches-remaining"
                  value="18 000"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Scheduled start
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="scheduled-start"
                  placeholder="MMM-DD-YYYY"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Scheduled end
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="scheduled-end"
                  placeholder="MMM-DD-YYYY"
                />
              </div>
            </div>
          </label>
        </div>
        <fieldset
          class="Fieldset-sc-9aoml1-0 eiFgjk sc-fzoNJl loPePV"
        >
          <legend
            style="margin-bottom:8px"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Line Lead
            </span>
            <span
              class="sc-AxhCb gXnznd"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
          </legend>
          <div
            class="Box-sc-1qu1edy-0 jlPsmj sc-fzoyTs kaPLDZ"
          >
            <label
              class="ClickInputLabel-j2axnv-0 kemUmZ"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="Checkbox__CheckboxInput-sc-1nm58f1-1 ejYTGD sc-fzoyTs kaPLDZ"
                name="linelead"
                type="checkbox"
                value="christiaan"
              />
              <div
                class="Checkbox__VisualCheckbox-sc-1nm58f1-0 kUStCo"
              />
              <p
                class="sc-AxhCb hpmHVQ"
                color="currentColor"
                font-size="16px"
              >
                Christiaan Oostenbrug
              </p>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jlPsmj sc-fzoyTs kaPLDZ"
          >
            <label
              class="ClickInputLabel-j2axnv-0 kemUmZ"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="Checkbox__CheckboxInput-sc-1nm58f1-1 ejYTGD sc-fzoyTs kaPLDZ"
                name="linelead"
                type="checkbox"
                value="matt"
              />
              <div
                class="Checkbox__VisualCheckbox-sc-1nm58f1-0 kUStCo"
              />
              <p
                class="sc-AxhCb hpmHVQ"
                color="currentColor"
                font-size="16px"
              >
                Matt Dunn
              </p>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jlPsmj sc-fzoyTs kaPLDZ"
          >
            <label
              class="ClickInputLabel-j2axnv-0 kjxgat"
              disabled=""
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="Checkbox__CheckboxInput-sc-1nm58f1-1 jdAeaf sc-fzoyTs kaPLDZ"
                disabled=""
                name="linelead"
                type="checkbox"
                value="clemens"
              />
              <div
                class="Checkbox__VisualCheckbox-sc-1nm58f1-0 kUStCo"
                disabled=""
              />
              <p
                class="sc-AxhCb fTtmG"
                color="currentColor"
                disabled=""
                font-size="16px"
              >
                Clemens Park
              </p>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jlPsmj sc-fzoyTs kaPLDZ"
          >
            <label
              class="ClickInputLabel-j2axnv-0 kjxgat"
              disabled=""
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="Checkbox__CheckboxInput-sc-1nm58f1-1 jdAeaf sc-fzoyTs kaPLDZ"
                disabled=""
                name="linelead"
                type="checkbox"
                value="nikola"
              />
              <div
                class="Checkbox__VisualCheckbox-sc-1nm58f1-0 kUStCo"
                disabled=""
              />
              <p
                class="sc-AxhCb fTtmG"
                color="currentColor"
                disabled=""
                font-size="16px"
              >
                Nikola Pejcic
              </p>
            </label>
          </div>
        </fieldset>
        <fieldset
          class="Fieldset-sc-9aoml1-0 eiFgjk sc-fzpmMD enYpte"
          id="reconcile"
        >
          <legend
            style="margin-bottom:8px"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Reconcile
            </span>
          </legend>
          <div
            class="Box-sc-1qu1edy-0 jlPsmj sc-fzoXWK bhiMMA"
          >
            <label
              class="ClickInputLabel-j2axnv-0 kemUmZ"
            >
              <input
                aria-invalid="true"
                aria-required="false"
                checked=""
                class="Radio__RadioInput-sc-82dpxx-1 iSoGgh sc-fzoXWK bhiMMA"
                name="settingSelection"
                type="radio"
                value="yes"
              />
              <div
                class="Radio__VisualRadio-sc-82dpxx-0 cMunLd"
              />
              <span
                class="sc-AxhCb hpmHVQ"
                color="currentColor"
                font-size="16px"
              >
                 Yes 
              </span>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jlPsmj sc-fzoXWK bhiMMA"
          >
            <label
              class="ClickInputLabel-j2axnv-0 kemUmZ"
            >
              <input
                aria-invalid="true"
                aria-required="false"
                class="Radio__RadioInput-sc-82dpxx-1 iSoGgh sc-fzoXWK bhiMMA"
                name="settingSelection"
                type="radio"
                value="no"
              />
              <div
                class="Radio__VisualRadio-sc-82dpxx-0 cMunLd"
              />
              <span
                class="sc-AxhCb hpmHVQ"
                color="currentColor"
                font-size="16px"
              >
                 No 
              </span>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jlPsmj sc-fzoXWK bhiMMA"
          >
            <label
              class="ClickInputLabel-j2axnv-0 kjxgat"
              disabled=""
            >
              <input
                aria-invalid="true"
                aria-required="false"
                class="Radio__RadioInput-sc-82dpxx-1 hBtCEn sc-fzoXWK bhiMMA"
                disabled=""
                name="settingSelection"
                type="radio"
                value="maybe"
              />
              <div
                class="Radio__VisualRadio-sc-82dpxx-0 bCyppR"
                disabled=""
              />
              <span
                class="sc-AxhCb fTtmG"
                color="currentColor"
                disabled=""
                font-size="16px"
              >
                 Maybe 
              </span>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AxjAm cUVzOc"
            color="#cc1439"
          >
            <svg
              aria-hidden="true"
              class="sc-AxirZ gcJrrZ"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="24px"
              icon="error"
              mr="x1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <div
              class="InlineValidation__Wrapper-sc-1jic7dw-0 XSNbP"
            >
              <p
                class="sc-AxhCb hpmHVQ"
                color="currentColor"
                font-size="16px"
              >
                Only yes can be selected...
              </p>
            </div>
          </div>
        </fieldset>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD sc-fznxKY drWwya"
        >
          <div
            id="Job Visibility-label"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Job Visibility
              </span>
            </div>
            <div
              class="ClickInputLabel-j2axnv-0 kemUmZ"
            >
              <div
                class="ToggleButton__Switch-asgrb8-1 irhlNv"
              >
                <input
                  aria-labelledby="Job Visibility-label"
                  aria-required="false"
                  class="ToggleButton__ToggleInput-asgrb8-2 lcDvtB"
                  id="job-visibility"
                  type="checkbox"
                  value="on"
                />
                <span
                  class="ToggleButton__Slider-asgrb8-0 bLvWmF"
                />
              </div>
              <p
                class="sc-AxhCb iNRqzd"
                color="currentColor"
                font-size="16px"
              >
                Hidden
              </p>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="sc-fzoLag lbLQKU"
      >
        <legend
          class="sc-AxheI sc-Axmtr sc-fzoyAV dtjMcd"
          font-size="20px"
          font-weight="500"
        >
          Rejects
        </legend>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Item
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="true"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 kjmJXs"
                  id="items"
                  value="235432"
                />
              </div>
            </div>
          </label>
          <div
            class="Box-sc-1qu1edy-0 sc-AxjAm cUVzOc"
            color="#cc1439"
          >
            <svg
              aria-hidden="true"
              class="sc-AxirZ gcJrrZ"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="24px"
              icon="error"
              mr="x1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <div
              class="InlineValidation__Wrapper-sc-1jic7dw-0 XSNbP"
            >
              <p
                class="sc-AxhCb hpmHVQ"
                color="currentColor"
                font-size="16px"
              >
                Item 235432 is not a valid entry
              </p>
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Quantity
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="quantity"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD sc-fznxKY drWwya"
        >
          <div
            id="Reject visibility-label"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Reject visibility
              </span>
            </div>
            <div
              class="ClickInputLabel-j2axnv-0 kjxgat"
              disabled=""
            >
              <div
                class="ToggleButton__Switch-asgrb8-1 irhlNv"
              >
                <input
                  aria-labelledby="Reject visibility-label"
                  aria-required="false"
                  class="ToggleButton__ToggleInput-asgrb8-2 gajnWZ"
                  disabled=""
                  id="reject-visibility"
                  type="checkbox"
                  value="on"
                />
                <span
                  class="ToggleButton__Slider-asgrb8-0 bQpZex"
                  disabled=""
                />
              </div>
              <p
                class="sc-AxhCb kigzKX"
                color="currentColor"
                disabled=""
                font-size="16px"
              >
                Hidden
              </p>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`Storyshots Form Form 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <form
      class="sc-fzoXzr jYbPbp"
    >
      <h2
        class="sc-AxgMl hWPmHw"
        font-size="26px"
        font-weight="500"
      >
        New Profile
      </h2>
      <div
        class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 ilQgHG"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Name
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
          >
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                id="name"
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 ilQgHG"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Date of birth
            </span>
            <span
              class="sc-AxhCb gXnznd"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
            <p
              class="sc-AxhCb sc-fzokOt itwNrV"
              color="currentColor"
              font-size="16px"
            >
              Enter a date below
            </p>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
          >
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                id="birthdate"
                placeholder="DD-MM-YYYY"
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 ilQgHG"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Place of birth
            </span>
            <span
              class="sc-AxhCb gXnznd"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
          >
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                id="birthplace"
              />
            </div>
          </div>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Form With form sections 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <form
      class="sc-fzoXzr jYbPbp"
    >
      <h2
        class="sc-AxgMl hWPmHw"
        font-size="26px"
        font-weight="500"
      >
        New Profile
      </h2>
      <fieldset
        class="sc-fzoLag lbLQKU"
      >
        <legend
          class="sc-AxheI sc-Axmtr sc-fzoyAV dtjMcd"
          font-size="20px"
          font-weight="500"
        >
          Personal Information
        </legend>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Name
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="name"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Date of birth
              </span>
              <span
                class="sc-AxhCb gXnznd"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
              <p
                class="sc-AxhCb sc-fzokOt itwNrV"
                color="currentColor"
                font-size="16px"
              >
                Enter a date below
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="birthdate"
                  placeholder="DD-MM-YYYY"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Place of birth
              </span>
              <span
                class="sc-AxhCb gXnznd"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="birthplace"
                />
              </div>
            </div>
          </label>
        </div>
      </fieldset>
      <fieldset
        class="sc-fzoLag lbLQKU"
      >
        <legend
          class="sc-AxheI sc-Axmtr sc-fzoyAV dtjMcd"
          font-size="20px"
          font-weight="500"
        >
          General Information
        </legend>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Gender
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="gender"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Occupation
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="occupation"
                />
              </div>
            </div>
          </label>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`Storyshots Form With form sections without titles 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <form
      class="sc-fzoXzr jYbPbp"
    >
      <h2
        class="sc-AxgMl hWPmHw"
        font-size="26px"
        font-weight="500"
      >
        New Profile
      </h2>
      <fieldset
        class="sc-fzoLag hRFyEi"
      >
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Name
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="name"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Date of birth
              </span>
              <span
                class="sc-AxhCb gXnznd"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
              <p
                class="sc-AxhCb sc-fzokOt itwNrV"
                color="currentColor"
                font-size="16px"
              >
                Enter a date below
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="birthdate"
                  placeholder="DD-MM-YYYY"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Place of birth
              </span>
              <span
                class="sc-AxhCb gXnznd"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="birthplace"
                />
              </div>
            </div>
          </label>
        </div>
      </fieldset>
      <fieldset
        class="sc-fzoLag hRFyEi"
      >
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Gender
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="gender"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 ilQgHG"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Occupation
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="occupation"
                />
              </div>
            </div>
          </label>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`Storyshots Form Without title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <form
      class="sc-fzoXzr bruFHJ"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 ilQgHG"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Name
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
          >
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                id="name"
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 ilQgHG"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Date of birth
            </span>
            <span
              class="sc-AxhCb gXnznd"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
            <p
              class="sc-AxhCb sc-fzokOt itwNrV"
              color="currentColor"
              font-size="16px"
            >
              Enter a date below
            </p>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
          >
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                id="birthdate"
                placeholder="DD-MM-YYYY"
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 ilQgHG"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Place of birth
            </span>
            <span
              class="sc-AxhCb gXnznd"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
          >
            <div
              class="Box-sc-1qu1edy-0 hxUhcg"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                id="birthplace"
              />
            </div>
          </div>
        </label>
      </div>
    </form>
  </div>
</div>
`;
